--- a/org/core.org
+++ b/org/core.org
@@ -179,7 +179,7 @@ Set the timezone for the container, defaults to UTC. To set the timezone set the
 #+begin_src sh :tangle no :noweb yes
 docker run -itd \
        --restart always \
-       --name=naviserver-s6 \
+       --name=naviserver \
        --env 'TZ=Europe/Moscow' \
        -p 127.0.0.1:8090:8080 \
        oupfiz5/naviserver:4.99.23
@@ -273,13 +273,27 @@ docker exec -it naviserver /bin/bash
 :CUSTOM_ID: versions
 :END:
 #+begin_src sh :shebang ""
-  CONTAINER_NAME='naviserver'
-  NS_IMAGE_TAG='4.99.23'
-  IMAGE_NAME='naviserver'
-  IMAGE_REPOSITORY='oupfiz5'
-  IMAGE_TAG="${NS_IMAGE_TAG}"
-  TCL_BUILD_IMAGE_TAG='22.01'
-  UBUNTU_TAG='20.04'
+  # * Version
+  NS_VERSION="${NS_VERSION:-4.99.23}"
+  NS_MODULES_VERSION="${NS_MODULES_VERSION:-4.99.23}"
+  RL_JSON_VERSION="${RL_JSON_VERSION:-0.11.1}"
+  TDOM_VERSION="${TDOM_VERSION:-0.9.1}"
+  THREAD_VERSION="${THREAD_VERSION:-2.8.6}"
+  TCL_VERSION="${TCL_VERSION:-8.6.11}"
+  TCLLIB_VERSION="${TCLLIB_VERSION:-1.20}"
+  XOTCL_VERSION="${XOTCL_VERSION:-2.3.0}"
+
+  CONTAINER_NAME="${CONTAINER_NAME:-naviserver}"
+  NS_IMAGE_TAG="${NS_IMAGE_TAG:-4.99.23}"
+  IMAGE_NAME="${IMAGE_NAME:-naviserver}"
+  IMAGE_REPOSITORY="${IMAGE_REPOSITORY:-oupfiz5}"
+  IMAGE_TAG="${IMAGE_TAG:-${NS_IMAGE_TAG}}"
+  TCL_BUILD_IMAGE_REPOSITORY="${TCL_BUILD_IMAGE_REPOSITORY:-oupfiz5}"
+  TCL_BUILD_IMAGE_NAME="${TCL_BUILD_IMAGE_NAME:-tcl-build}"
+  TCL_BUILD_IMAGE_TAG="${TCL_BUILD_IMAGE_TAG:-22.01}"
+  UBUNTU_IMAGE_REPOSITORY=""
+  UBUNTU_IMAGE_NAME="${UBUNTU_IMAGE_NAME:-ubuntu}"
+  UBUNTU_IMAGE_TAG="${UBUNTU_IMAGE_TAG:-20.04}"
 #+end_src
 ** ../.fossil-settings/crlf-glob
 :PROPERTIES:
@@ -439,9 +453,9 @@ docker exec -it naviserver /bin/bash
         - name: Naviserver. Build. Check image and container.
           run: |
             echo "::group::Build image"
-            export IMAGE_TAG="${{ github.sha }}"
-            export IMAGE="${IMAGE_REPOSITORY}/${IMAGE_NAME}:${IMAGE_TAG}"
             echo "Build image"
+            set -a; source ${GITHUB_WORKSPACE}/src/VERSIONS ; set +a;
+            export IMAGE_TAG="${{ github.sha }}"
             cd ${GITHUB_WORKSPACE}/src/hook
             ./build.sh
             echo "::endgroup::"
@@ -475,21 +489,27 @@ docker exec -it naviserver /bin/bash
 :CUSTOM_ID: dockerfile
 :END:
 #+begin_src sh :shebang ""
-  # * Build Naviserver
-  ARG TCL_BUILD_IMAGE_TAG="${TCL_BUILD_IMAGE_TAG:-22.01}"
-    FROM oupfiz5/tcl-build:${TCL_BUILD_IMAGE_TAG} as build
+  # * Arguments
+  ARG \
+      NS_MODULES_VERSION="${NS_MODULES_VERSION}" \
+      NS_VERSION="${NS_VERSION}" \
+      RL_JSON_VERSION="${RL_JSON_VERSION}" \
+      TCLLIB_VERSION="${TCLLIB_VERSION}" \
+      TCL_BUILD_IMAGE_NAME="${TCL_BUILD_IMAGE_NAME}" \
+      TCL_BUILD_IMAGE_REPOSITORY="${TCL_BUILD_IMAGE_REPOSITORY}" \
+      TCL_BUILD_IMAGE_TAG="${TCL_BUILD_IMAGE_TAG}" \
+      TCL_VERSION="${TCL_VERSION}" \
+      TDOM_VERSION="${TDOM_VERSION}" \
+      THREAD_VERSION="${THREAD_VERSION}" \
+      UBUNTU_IMAGE_NAME="${UBUNTU_IMAGE_NAME}" \
+      UBUNTU_IMAGE_TAG="${UBUNTU_IMAGE_TAG}" \
+      UBUNTU_IMAGE_REPOSITORY="${UBUNTU_IMAGE_REPOSITORY}" \
+      XOTCL_VERSION="${XOTCL_VERSION}"
 
-  # ** Args
-  ARG NS_VERSION \
-      NS_MODULES_VERSION \
-      RL_JSON_VERSION \
-      TCLLIB_VERSION \
-      TCL_VERSION \
-      TDOM_VERSION \
-      THREAD_VERSION \
-      XOTCL_VERSION
+  # * Build software
+  FROM ${TCL_BUILD_IMAGE_REPOSITORY}/${TCL_BUILD_IMAGE_NAME}:${TCL_BUILD_IMAGE_TAG} as build
 
-  # ** Environments
+  # ** Environmen
   ENV NS_VERSION="${NS_VERSION}" \
       NS_MODULES_VERSION="${NS_MODULES_VERSION}" \
       RL_JSON_VERSION_VERSION="${RL_JSON_VERSION_VERSION}" \
@@ -506,19 +526,7 @@ docker exec -it naviserver /bin/bash
   RUN  /bin/bash /builds/all-build.sh
 
   # * From
-  FROM ubuntu:20.04
-
-  # ** Arguments
-  # ARG BUILD_DATE \
-  #     VERSION \
-  #     NS_VERSION \
-  #     NS_MODULES_VERSION \
-  #     RL_JSON_VERSION \
-  #     TCLLIB_VERSION \
-  #     TCL_VERSION \
-  #     TDOM_VERSION \
-  #     THREAD_VERSION \
-  #     XOTCL_VERSION
+  FROM ${UBUNTU_IMAGE_NAME}:${UBUNTU_IMAGE_TAG}
 
   # ** Copy Naviserver
   WORKDIR /
@@ -589,27 +597,33 @@ docker exec -it naviserver /bin/bash
 :CUSTOM_ID: hook-build-sh
 :END:
 #+begin_src sh
-  # shellcheck disable=SC1091
-  set -a; source ../VERSIONS ; set +a;
-  source ../builds/env-vars.sh
+    # shellcheck disable=SC1091
+    set -a; source ../VERSIONS ; set +a;
+    source ../builds/env-vars.sh
 
-  IMAGE="${IMAGE:-${IMAGE_REPOSITORY}/${IMAGE_NAME}:${IMAGE_TAG}}"
-  DOCKERFILE="${DOCKERFILE:-Dockerfile}"
+    IMAGE="${IMAGE:-${IMAGE_REPOSITORY}/${IMAGE_NAME}:${IMAGE_TAG}}"
+    DOCKERFILE="${DOCKERFILE:-Dockerfile}"
 
-  docker build --no-cache \
-         --build-arg BUILD_DATE="$(date -u +"%Y-%m-%dT%H:%M:%SZ")" \
-         --build-arg VERSION="${NS_IMAGE_TAG}" \
-         --build-arg NS_VERSION="${NS_VERSION}" \
-         --build-arg NS_MODULES_VERSION="${NS_MODULES_VERSION}" \
-         --build-arg RL_JSON_VERSION="${RL_JSON_VERSION}" \
-         --build-arg TCLLIB_VERSION="${TCLLIB_VERSION}" \
-         --build-arg TCL_VERSION="${TCL_VERSION}" \
-         --build-arg TDOM_VERSION="${TDOM_VERSION}" \
-         --build-arg THREAD_VERSION="${THREAD_VERSION}" \
-         --build-arg XOTCL_VERSION="${XOTCL_VERSION}" \
-         -t "${IMAGE}" \
-         -f ../"${DOCKERFILE}" \
-         ../.
+    docker build --no-cache \
+           --build-arg UBUNTU_IMAGE_REPOSITORY="${UBUNTU_IMAGE_REPOSITORY}" \
+           --build-arg UBUNTU_IMAGE_NAME="${UBUNTU_IMAGE_NAME}" \
+           --build-arg UBUNTU_IMAGE_TAG="${UBUNTU_IMAGE_TAG}" \
+           --build-arg TCL_BUILD_IMAGE_REPOSITORY="${TCL_BUILD_IMAGE_REPOSITORY}" \
+           --build-arg TCL_BUILD_IMAGE_NAME="${TCL_BUILD_IMAGE_NAME}" \
+           --build-arg TCL_BUILD_IMAGE_TAG="${TCL_BUILD_IMAGE_TAG}" \
+           --build-arg BUILD_DATE="$(date -u +"%Y-%m-%dT%H:%M:%SZ")" \
+           --build-arg VERSION="${NS_IMAGE_TAG}" \
+           --build-arg NS_VERSION="${NS_VERSION}" \
+           --build-arg NS_MODULES_VERSION="${NS_MODULES_VERSION}" \
+           --build-arg RL_JSON_VERSION="${RL_JSON_VERSION}" \
+           --build-arg TCLLIB_VERSION="${TCLLIB_VERSION}" \
+           --build-arg TCL_VERSION="${TCL_VERSION}" \
+           --build-arg TDOM_VERSION="${TDOM_VERSION}" \
+           --build-arg THREAD_VERSION="${THREAD_VERSION}" \
+           --build-arg XOTCL_VERSION="${XOTCL_VERSION}" \
+           -t "${IMAGE}" \
+           -f ../"${DOCKERFILE}" \
+           ../.
 #+end_src
 ** hook/push.sh :code:
 :PROPERTIES:
@@ -930,6 +944,10 @@ set ::env(LANG) en_US.UTF-8
 :END:
 #+begin_src sh
   # shellcheck shell=bash
+
+  # shellcheck disable=SC1091
+  . /VERSIONS
+
   sh /builds/tcl-build.sh
   sh /builds/tcllib-build.sh
   sh /builds/ns-build.sh
@@ -992,7 +1010,7 @@ load '.bats-battery/bats-support/load.bash'
               -print0
       )
   }
-t
+
   @test "Check shell files" {
         run export LC_ALL=C.UTF-8; shellcheck "${targets[@]}"
         assert_success
