--- a/org/core.org
+++ b/org/core.org
@@ -490,6 +490,7 @@ docker exec -it naviserver /bin/bash
 #+begin_src sh :shebang ""
   # * Arguments
   ARG \
+      BUILD_DATE="${BUILD_DATE}" \
       NS_MODULES_VERSION="${NS_MODULES_VERSION}" \
       NS_VERSION="${NS_VERSION}" \
       RL_JSON_VERSION="${RL_JSON_VERSION}" \
